# vibe-coding-control-center

./: .audit_id  .envrc  .gitattributes  .gitignore  .graphifyignore  .mcp.json  .pre-commit-config.yaml  .shellcheckrc  .venv  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPER.md  MEMORY.md  MODERN_README.md  README.md  SOUL.md  STRUCTURE.md  TASK.md  UPGRADE_FEATURES.md  WORKFLOW.md  agent.md  bats  candidates_blocked.json  candidates_no_state.json  coverage.json  debug_git.py  debug_test.py  echo  install.sh  manager_issues.json  migrate-to-v2.sh  plan.md  pyproject.toml  pytest.ini  skills-lock.json  test_cwd_check.py  test_git_hook_env.sh  test_regex.sh  (+2 more)
.agent/: README.md  agent-spec.yaml  governance.yaml  pr_publish_directive.md  skills-handbook.md
.agent/context/: agent.md  memory.md  task.md
.agent/execution-results/: task-99578-a.json  update-test.json
.agent/governance/: README.md
.agent/lib/: audit.sh  bump_version.sh  gh-ops.sh  git-ops.sh  git-scope.sh
.agent/policies/: README.md  common.md  plan.md  review.md  run.md
.agent/reports/: serena-impact.json  trace-system-analysis-2026-05-24.md
.agent/reviews/: architecture-decisions.md  engineering-review-report.md
.agent/rules/: README.md  architecture.md  cli-usage.md  coding-standards.md  common.md  (+8 more)
.claude/: launch.json  settings.json
.claude-plugin/: plugin.json
.codex/: config.toml  hooks.json  migrate-to-codex-report.txt  review-policy.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  labeler.yml
.serena/: project.yml
.specify/: extensions.yml  feature.json  integration.json  superpowers.yml
.vibe/: config.yaml
alias/: agent.sh  git.sh  loader.sh  tmux.sh  worktree.sh
artifacts/: 2026-03-09-rotate-flow-entry-blocker.md  2026-03-10-main-preferred-conflict-rerun-list.md  2026-03-10-shared-state-task3-plan-gap.md
assets/: manifest.json
config/: README.md  aliases.sh  config.local  dependencies.toml  keys.template.env  loader.sh  loc_limits.yaml  models.json  prompt-recipes.yaml  prompts.yaml  settings.yaml  skills.json
debug/: external-project-integration-debug.md  issue-481-analysis.md
docs/: 2026-05-17-issue-995-flow-conflict-detection-design.md  2026-05-17-issue-995-implementation.md  ARCHITECTURE_GUIDE.md  CHEATSHEET.md  DEVELOPMENT.md  README.md  TDD_GUIDE.md  agents-guide.md  alias-helper.md  alias-testing-plan.md  cognition-spec-dominion.md  doc-review-requirements.md  handoff-indicate-3025.md  model-spec-context.md  prd-agent-dev.md  task-resume-blocked-recovery-implementation.md  tech-spec-agent-dev.md  test-plan-agent-dev.md  usage_advice.md  vibe-help.txt  技术架构说明.md  项目理解指南.md
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  manifest.json
install/: init-project.sh  install-claude.sh  install-cockpit.sh  install-codex.sh  install-opencode.sh
lib/: agents.sh  alias.sh  cache.sh  chat_router.sh  check.sh  check_groups.sh  check_groups_link.sh  check_pr_status.sh  clean.sh  config.sh  config_init.sh  config_loader.sh  config_migration.sh  core_commands.sh  doctor.sh  doctor_plugins.sh  email_validation.sh  env_manager.sh  error_handling.sh  flow.sh  flow_checkout.sh  flow_done.sh  flow_help.sh  flow_history.sh  flow_list.sh  flow_pr.sh  flow_review.sh  flow_runtime.sh  flow_show.sh  flow_state.sh  flow_status.sh  i18n.sh  init.sh  init_help.sh  init_project.sh  install_utils.sh  keys.sh  keys_manager.sh  keys_support.sh  mcp_manager.sh  (+43 more)
lib3/: README.md  vibe.sh
mock_bin/: code
scripts/: add_trace_decorators.py  analyze-test-performance.sh  audit-blocked-flows.py  audit-candidates.py  audit-cleanup.py  audit-ledger-summary.py  audit-validate.py  auto_add_trace.py  backup-project.sh  bump.sh  cleanup.sh  cleanup_error_blocked_reason.py  debug_review_context.py  env-manager.sh  fix-orchestra-labels.sh  github_project_bootstrap_sync.sh  github_project_field_map.sh  init.sh  inject-vibe-env.sh  install-deps.sh  install.sh  lint.sh  metrics.sh  openspec_bridge.sh  python_structure_summary.sh  refactor_services_imports.py  reorganize_v3_docs.py  reorganize_v3_docs_updated.py  rotate.sh  scan_services_imports.py  serena_gate.py  serena_gate.sh  shell_structure_summary.sh  structure_summary.sh  sync-labels.sh  sync-skills.sh  tdd-init.sh  test-all.sh  test_openai.py  test_trace.py  (+8 more)
supervisor/: apply.md  issue-cleanup.md  manager.backup-2026-04-03.md  manager.md  orchestra.md  project-explorer.md  roadmap-common.md
templates/: pr.md  prd.md  spec.md
tests/: README.md  check_help.sh  conftest.py  debug_config.sh  task-readme-preservation-test.sh  task-readme-status-audit.sh  test-alias-fixes.sh  test-aliases-quick.sh  test-aliases-simple.sh  test-aliases.sh  test-final.sh  test-minimal.sh  test-simple.sh  test_agent_dev_plan.sh  test_alias_context.sh  test_audit_blocked_flows_script.py  test_audit_cleanup_script.py  test_audit_ledger_summary_script.py  test_basic.bats  test_build a test feature .sh  test_capability_registry.sh  test_cli_alignment.sh  test_cli_commands.sh  test_config_init.sh  test_config_isolation.sh  test_config_loader.sh  test_config_toml.sh  test_core.bats  test_email_validation.sh  test_error_classification.py  test_execution_contract.bats  test_execution_plane_conflicts.bats  test_execution_plane_e2e_human.bats  test_execution_plane_e2e_openclaw.bats  test_execution_plane_integration.bats  test_execution_plane_performance.bats  test_execution_plane_recovery.bats  test_execution_plane_stress.bats  test_flow.bats  test_init_project.sh  (+47 more)
v2/: CLAUDE.md  SOUL.md
v3/: MASTER-PRD.md  README.md
(+3048 files in other folders)
