[project]
name = "vibe3"
version = "3.0.0"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0.3",
    "litellm>=1.0.0",
    "serena-agent @ git+https://github.com/oraios/serena@v0.1.4",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]

[project.scripts]
vibe3 = "vibe3.cli:main"

[tool.uv]
package = false

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# This project uses uv for dependency management
# Run `uv sync` to install dependencies
# Run `uv run pytest` to run tests
# Run `uv run mypy` to run type checking

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.isort]
known-first-party = ["vibe3"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
disallow_untyped_defs = true
ignore_missing_imports = true

# Allow lazy import patterns (needed for circular dependency avoidance)
# These errors are caused by __getattr__ based lazy imports in __init__.py files
disable_error_code = ["misc", "valid-type", "no-any-return", "attr-defined"]

[tool.pyright]
reportMissingModuleSource = false

[dependency-groups]
dev = [
    "mypy>=1.5.0",
    "pytest>=7.4.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.5.0",
    "ruff==0.15.6",
    "black==26.3.1",
    "pre-commit>=3.0.0",
    "types-pyyaml>=6.0.12.20250915",
    "hypothesis>=6.151.9",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "radon>=6.0.1",
    "vulture>=2.16",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--import-mode=importlib"
markers = [
    "regression: Regression tests for specific issues (e.g., @pytest.mark.regression(\"issue-123\"))",
    "integration: Integration tests requiring external services (gh auth, network, etc.)",
    "slow: Slow tests (e.g., subprocess isolation tests)",
]
